[tool.poetry]
name = "data-hub-api"
version = "23.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
Django = "==2.2.7"
djangorestframework = "==3.10.3"
django-admin-ip-restrictor = "==1.0.0"
django-environ = "==0.4.5"
django-extensions = "==2.2.5"
django-filter = "==2.2.0"
django-reversion = "==3.0.4"
django-pglocks = "==1.0.3"
django-model-utils = "==3.2.0"
django-mptt = "==0.10.0"
django-oauth-toolkit = "==1.2.0"
oauthlib = "==2.1.0"
whitenoise = "==4.1.4"
chardet = "==3.0.4"
pyyaml = "==5.1.2"
python-dateutil = "==2.8.1"
psycopg2 = "==2.8.4"
psycogreen = "==1.0.1"
boto3 = "==1.10.8"
notifications-python-client = "==5.4.0"
statsd = "==3.3.0"
mail-parser = "==3.9.3"
icalendar = "==4.0.3"
django-redis = "==4.10.0"
redis = "==3.3.11"
elasticsearch = "==6.4.0"
elasticsearch-dsl = "==6.3.1"
celery = {version = "==4.3", extras = ["redis"]}
ipython = "==7.9.0"
gunicorn = "==20.0.2"
gevent = "==1.4.0"
mohawk = "==1.1.0"
requests = "==2.22.0"
requests_toolbelt = "==0.9.1"
uritemplate = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "==5.3.0"
pytest-django = "==3.7.0"
pytest-sugar = "==0.9.2"
pytest-cov = "==2.8.1"
pytest-xdist = "==1.30.0"
piprot = "==0.9.10"
factory-boy = "==2.12.0"
freezegun = "==0.3.12"
requests-mock = "==1.7.0"
django-debug-toolbar = "==2.1"
pip-tools = "==4.2.0"
towncrier = "==19.2.0"
watchdog = "==0.9.0"
flake8 = "==3.7.9"
flake8-blind-except = "==0.1.1"
flake8-bugbear = "==19.8.0"
flake8-commas = "==2.0.0"
flake8-debugger = "==3.2.1"
flake8-import-order = "==0.18.1"
flake8-docstrings = "==1.5.0"
flake8-print = "==3.1.4"
flake8-quotes = "==2.1.1"
flake8-string-format = "==0.2.3"
pep8-naming = "==0.9.1"
pydocstyle = "==4.0.1"
sentry_sdk = "==0.13.2"

[tool.towncrier]
    package_dir = "datahub"
    filename = "CHANGELOG.md"
    directory = "changelog/"
    title_format = "# Data Hub API {version} ({project_date})"
    underlines = [""]
    template = "changelog/_template.md.jinja2"

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "internal"
        name = "Internal changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "db"
        name = "Database schema"
        showcontent = true

    [[tool.towncrier.section]]
        path = "adviser"
        name = "Advisers"

    [[tool.towncrier.section]]
        path = "company"
        name = "Companies"

    [[tool.towncrier.section]]
        path = "contact"
        name = "Contacts"

    [[tool.towncrier.section]]
        path = "event"
        name = "Events"

    [[tool.towncrier.section]]
        path = "interaction"
        name = "Interactions"

    [[tool.towncrier.section]]
        path = "investment"
        name = "Investment"

    [[tool.towncrier.section]]
        path = "omis"
        name = "OMIS"

    [[tool.towncrier.section]]
        path = ""
        name = ""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

